# ScorpionResume

./: .gitignore  03-04_.MPF  03-04_copy.MPF  CMakeLists.txt  about.MPF  about.cpp  about.h  about.ui  data.cpp  data.h  dictionary.cpp  dictionary.h  gcode.cpp  gcode.h  images.qrc  log.cpp  log.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myspinbox.cpp  myspinbox.h  outform.cpp  outform.h  outform.ui  outgcode.cpp  outgcode.h  programcode.cpp  programcode.h  resources.rc  selectedfile.cpp  selectedfile.h
